WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287286
Fix memory leak in `_WKWebAuthenticationPanel`
https://bugs.webkit.org/show_bug.cgi?id=287286
Summary
Fix memory leak in `_WKWebAuthenticationPanel`
Aditya Keerthi
Reported
2025-02-07 13:22:21 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-07 13:22:45 PST
<
rdar://problem/144407149
>
Aditya Keerthi
Comment 2
2025-02-07 13:27:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40243
EWS
Comment 3
2025-02-07 17:19:05 PST
Committed
290064@main
(aba997665b0a): <
https://commits.webkit.org/290064@main
> Reviewed commits have been landed. Closing PR #40243 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug