Fix memory leak in `_WKWebAuthenticationPanel` https://bugs.webkit.org/show_bug.cgi?id=287286 rdar://144407149

Reviewed by Wenson Hsieh and Chris Dumez.

* Source/WebKit/UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:
(-[_WKWebAuthenticationPanel transports]):

`_transports` is a `RetainPtr` and `-[NSMutableSet initWithCapacity:]` does not
return an autoreleased object. Use `adoptNS` to avoid leaking memory.

Canonical link: https://commits.webkit.org/290064@main