Source/WebKit/UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm
@@ -199,7 +199,7 @@ static _WKWebAuthenticationTransport wkWebAuthenticationTransport(WebCore::Authe
         return _transports.get();
 
     auto& transports = _panel->transports();
-    _transports = [[NSMutableSet alloc] initWithCapacity:transports.size()];
+    _transports = adoptNS([[NSMutableSet alloc] initWithCapacity:transports.size()]);
     for (auto& transport : transports)
         [_transports addObject:adoptNS([[NSNumber alloc] initWithInt:wkWebAuthenticationTransport(transport)]).get()];
     return _transports.get();
